feat: remove file sizes
